--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="indexhome.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nossosserviços.html">Nossos Serviços</a>
+              <a class="nav-link" href="nossosservicos.html">Nossos Serviços</a>
             </li>
             <li class="nav-item dropdown">
             </li>
