--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <br>
               <br>
             </p>
-            <a href="nossosserviços.html" class="btn btn-primary" data-toggle="modal" data-target="#id_modal14">Saiba mais</a>
+            <a href="nossosservicos.html" class="btn btn-primary" data-toggle="modal" data-target="#id_modal14">Saiba mais</a>
           </div>
         </div>
       
